Improve meta for new Rest API
